2006-07-18  Ross Burton  <ross@openedhand.com>

	* addressbook/gui/contact-editor/e-contact-editor.c:
	* addressbook/gui/contact-list-editor/e-contact-list-editor.c:
	* addressbook/gui/widgets/eab-contact-display.c:
	Fix for EContactPhoto changes.  Partially fixed by Hiroyuki Ikezoe
	<poincare@ikezoe.net>, finished by myself.  (#347870).

2006-07-18  Andre Klapper  <a9016009@gmx.de>

	* gui/contact-editor/contact-editor.glade: 
	* gui/contact-editor/fulladdr.glade: 
	* gui/contact-editor/fullname.glade: 
	* gui/contact-editor/im.glade: 
	* gui/contact-list-editor/contact-list-editor.glade: 
	remove "*" from translation. Fixes bug #331147.

2006-19-06 Ushveen Kaur <kushveen@novell.com>

	** Fixes bug #332909
	
	* gui/contact-editor/e-contact-editor.[ch]: once asked for resizing, it 
	wont ask again.

2006-07-08  Aishwarya K  <aishkalyan@gmail.com>

	Fix for #332963
	* e-contact-editor.c: Set the mnemonic character for "No image"

2006-06-30  Johnny Jacob  <jjohnny@novell.com>
	* gui/cal-search-bar.c: (get_current_category),
	(get_category_sexp), (notify_e_cal_view_contains),
	(notify_category_is), (regen_query), (regen_view_query),
	(make_suboptions), (cal_search_bar_construct): Added/Removed code
	for new search ui.
	* gui/e-tasks.c: (search_bar_sexp_changed_cb):
	Added/Removed code for search ui.

2006-06-29  simon.zheng  <simon.zheng@sun.com>

	* gui/widgets/eab-gui-util.c: (file_exists): Convert filename
	from glib encoding to utf8 encoding.
	Fixes Bug #339151

2006-06-27  Devashish Sharma  <sdevashish@novell.com>

	* gui/widgets/eab-gui-util.c (do_delete) :Fix for 
	Bug #333691.

2006-06-16  Devashish Sharma  <sdevashish@novell.com>

	* gui/contact-list-editor/e-contact-list-editor.c :
	Fix for Bug #317511

2006-06-15  Devashish Sharma  <sdevashish@novell.com>

	* gui/component/addressbook-view.c : Drag-n-drop contacts now
	defaults to Moving the contact and the contacts moved will be 
	instantly removed from the source addressbook.